[gd_scene load_steps=10 format=2]

[ext_resource path="res://mods-unpacked/Lasonbrah-betterSaver/extra/betterSaver.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/raw/NotoSansSC-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://mods-unpacked/Lasonbrah-betterSaver/extra/save_bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://resources/fonts/raw/Anybody-Medium.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0.0431373, 0.368627, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
outline_color = Color( 0, 0.00784314, 0.294118, 1 )
font_data = ExtResource( 6 )

[node name="betterSaver" type="ColorRect"]
margin_left = -207.0
margin_top = -181.0
margin_right = 2144.0
margin_bottom = 1228.0
color = Color( 0.25098, 0.25098, 0.25098, 0.345098 )
script = ExtResource( 1 )

[node name="main" type="ColorRect" parent="."]
margin_left = 863.0
margin_top = 485.0
margin_right = 1515.0
margin_bottom = 854.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )

[node name="title" type="Label" parent="main"]
margin_right = 572.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "存档读取LoadSave"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="main"]
margin_left = 6.0
margin_top = 71.0
margin_right = 648.0
margin_bottom = 264.0

[node name="Save Data 1" parent="main/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 642.0
margin_bottom = 70.0

[node name="Save Data 2" parent="main/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 74.0
margin_right = 642.0
margin_bottom = 144.0

[node name="Save Data 3" parent="main/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 148.0
margin_right = 642.0
margin_bottom = 218.0

[node name="Save Data 4" parent="main/VBoxContainer" instance=ExtResource( 3 )]
self_modulate = Color( 0.415686, 0.45098, 1, 1 )
margin_top = 222.0
margin_right = 642.0
margin_bottom = 292.0

[node name="SAVE" type="Button" parent="main"]
margin_left = 475.0
margin_top = 2.0
margin_right = 546.0
margin_bottom = 65.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="main/SAVE"]
margin_left = 6.0
margin_top = -3.0
margin_right = 66.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "存档"
align = 1
valign = 1

[node name="Label2" type="Label" parent="main/SAVE"]
margin_left = 7.0
margin_top = 28.0
margin_right = 67.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
text = "SAVE"
align = 1
valign = 1

[node name="TouchScreenButton2" type="TouchScreenButton" parent="main/SAVE"]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1.10938, 0.984375 )
normal = ExtResource( 5 )

[node name="EXIT" type="Button" parent="main"]
margin_left = 571.0
margin_top = 2.0
margin_right = 642.0
margin_bottom = 65.0
text = "X"
script = ExtResource( 4 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="main/EXIT"]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1.10938, 0.984375 )
normal = ExtResource( 5 )

[connection signal="pressed" from="main/SAVE" to="." method="_on_SAVE_pressed"]
[connection signal="pressed" from="main/SAVE/TouchScreenButton2" to="." method="_on_TouchScreenButton2_pressed"]
[connection signal="pressed" from="main/EXIT" to="." method="_on_EXIT_pressed"]
[connection signal="pressed" from="main/EXIT/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
